@@ -1,20 +1,19 @@
 Core Developers:
 ================
   Albert Chu <chu11@llnl.gov>
-  Anand Babu <ab@gnu.org.in> <ab@californiadigital.com>
-  Balamurugan <bala.a@californiadigital.com>
-  Ian Zimmerman <itz@californiadigital.com>
+  Anand Babu <ab@zresearch.com>
+  Balamurugan <bala@zresearch.com>
+  Ian Zimmerman <itz@buug.org>
   Jim Garlick <garlick@llnl.gov>
 
 Documentation Writer:
 =====================
-  Anand Babu <ab@gnu.org.in>
-
+  Anand Babu <ab@zresearch.com>
 
 Packaging:
 ==========
   RedHat GNU/Linux: Albert Chu <chu11@llnl.gov>
-  Debian GNU/Linux: Ian Zimmerman <itz@californiadigital.com> 
+  Debian GNU/Linux: Ian Zimmerman <itz@buug.org> 
 
 
 
